<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="120dp">

        <ImageView
            android:id="@+id/avatarImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher_background"
            android:padding="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/firstNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_item_firts_name_label"
            android:theme="@style/head"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toEndOf="@+id/avatarImageView"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/lastNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_item_last_name_label"
            android:theme="@style/head"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toEndOf="@+id/avatarImageView"
            app:layout_constraintTop_toBottomOf="@id/firstNameLabel"/>

        <TextView
            android:id="@+id/emailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_item_email_label"
            android:theme="@style/head"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toEndOf="@+id/avatarImageView"
            app:layout_constraintTop_toBottomOf="@id/lastNameLabel"/>

        <TextView
            android:id="@+id/firstNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_item_firts_name_label"
            android:theme="@style/head"
            android:layout_marginTop="5dp"
            android:layout_marginStart="3dp"
            app:layout_constraintStart_toEndOf="@+id/firstNameLabel"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/lastNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_item_firts_name_label"
            android:theme="@style/head"
            android:layout_marginTop="5dp"
            android:layout_marginStart="3dp"
            app:layout_constraintStart_toEndOf="@+id/lastNameLabel"
            app:layout_constraintTop_toBottomOf="@id/firstNameTextView"/>

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_item_email_label"
            android:theme="@style/head"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toEndOf="@+id/emailLabel"
            app:layout_constraintTop_toBottomOf="@id/lastNameTextView"/>

        <Button
            android:id="@+id/updateUserItemButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_item_update_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/deleteUserItemButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_item_delete_button"
            app:layout_constraintTop_toBottomOf="@id/updateUserItemButton"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>